--- a/style.css
+++ b/style.css
@@ -1,31 +1,64 @@
 @charset "utf-8";
 
-
-
-h1, h3
-{
-    text-align:center;
+body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height:auto;
 }
+
+h1 { font-size: 2em; }
+h2 { font-size: 1.5em; }
 h3
 {
-    background-color:black;
-    color:white;
-    font-size:0.9em;
+    font-size:1.2em;
+    line-height: 2.4em;
     margin-bottom:0px;
-}
-.news p
-{
-    background-color:#CCCCCC;
-    margin-top:0px;
 }
 .news
 {
-    width:70%;
-    margin:auto;
+    width:50%;
+    margin: 1em auto;
+    border-bottom: 1px dotted #000;
+    padding: 2em 1em;
 }
 
 a
 {
     text-decoration: none;
     color: blue;
+}
+
+header {
+  text-align: center;
+}
+
+#grid {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-content: stretch;
+  align-items: stretch;
+}
+
+#layout-post {
+  display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-align-content: stretch;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
 }
