--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,38 @@ h3
     padding: 2em 1em;
 }
 
+#post-comments {
+  border-top: 1px dashed #ccc;
+  margin-top: 4em;
+  padding-top: 2em;
+}
+.content-comment {
+  margin-top: 2em;
+  margin-bottom: 2em;
+  padding: 1em;
+  background: #eee;
+}
+form {
+  width: 100%;
+  margin: 2em auto;
+  padding: 1em;
+  background: rgba(100, 100, 100, 0.1);
+}
+fieldset {
+  position: relative;
+  border: none;
+}
+label {
+  color: rgba(0, 0, 0, 0.5);
+  transform-origin: left;
+  transition: all 0.3s ease;
+}
+input, textarea {
+  width: 100%;
+  margin-top: 10px;
+  background: rgba(100, 100, 100, 0.1);
+}
+
 a
 {
     text-decoration: none;
