--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,6 +118,15 @@ input, textarea {
   background: #FBDEB9;
   color: #666;
 }
+#main_header_backend {
+  width: 50%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: #FBB9B9;
+  color: #666;
+}
 #main_navigation {
   position: fixed;
   top: 0;
@@ -144,6 +153,24 @@ input, textarea {
   padding-top: 10px;
   border-top: 4px solid #fbdeb9;
 }
+
+#backend_navigation {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  font-size: 80%;
+}
+#backend_navigation ul {
+  list-style: none;
+  margin: 0;
+  padding:0;
+}
+#backend_navigation ul li {
+  padding-left: 10px;
+  border-left: 4px solid #fbdeb9;
+  display: inline-block;
+}
+
 #header {
   width: 30%;
   height: 100vh;
