--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,6 +184,7 @@ input, textarea {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-left: 3em;
   background: #FBDEB9;
   color: #666;
 }
