--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ em {font-style: italic;}
 
 
 
-h1 { font-size: 2em; line-height: 1.5em;}
+h1 a { font-size: 1.5em; line-height: 1.5em;}
 h1 span, h2 span, h3 span { font-size : 60%;}
 h2 { font-size: 1.4em; }
 h3
@@ -319,4 +319,9 @@ input, textarea {
   font-size: 3em;
   text-transform: lowercase;
   margin: .5em 0;
+}
+
+#header_dashbord {
+  min-height: 20vh;
+  padding: 1em 0 1em 0;
 }
