--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,16 @@ body {
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Spectral:500,700,800&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Material+Icons');
+/* Rules for sizing the icon. */
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
+
+/* Rules for using icons as black on a light background. */
+.material-icons.md-light { color: rgba(255, 255, 255, 0.54); }
+
+
 p, address {font-size:1em;line-height:1.6em;font-weight:400; color:#444;}
 a {font-size:1em; line-height:1.6em;font-weight:400; color:#666;text-decoration: underline;}
 a:hover {text-decoration: none;}
@@ -52,11 +62,7 @@ strong {font-weight: bold; color: #EEA852;}
 em {font-style: italic;}
 
 
-
-
-
-
-h1 a { font-size: 1.5em; line-height: 1.5em;}
+h1, h1 a { font-size: 1.5em; line-height: 1.5em;}
 h1 span, h2 span, h3 span { font-size : 60%;}
 h2 { font-size: 1.4em; }
 h3
@@ -149,6 +155,22 @@ input, textarea {
   margin-right:1.5em;
   padding-top: 10px;
   border-top: 4px solid #fbdeb9;
+}
+#main_navigation a {
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 600;
+}
+.button_home {
+    width: 100%;
+    height: 3em;
+    background:  #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.news a {
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 500;
 }
 
 #header {
