--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,7 +121,6 @@ section {
   background: #eee;
 }
 form {
-  width: 100%;
   margin: 2em auto;
   padding: 1em;
   background: rgba(100, 100, 100, 0.1);
@@ -129,6 +128,9 @@ form {
 fieldset {
   position: relative;
   border: none;
+}
+fieldset abbr {
+  color: #f78686;
 }
 label {
   color: rgba(0, 0, 0, 0.5);
@@ -139,6 +141,9 @@ input, textarea {
   width: 100%;
   margin-top: 10px;
   background: rgba(100, 100, 100, 0.1);
+}
+input#agreement {
+  width: auto;
 }
 
 #main_header {
@@ -288,7 +293,8 @@ figure#logo img {
   align-items: flex-start;
 }
 #layout-connexion section {
-  width: auto;
+  width: 50%;
+  padding: 0 3em;
 }
 
 #posts-grid {
