--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,7 +106,7 @@ section {
 #layout-post header, #dashbord-grid header {
   border-bottom: 1px solid #ccc;
   padding-bottom: 2em;
-  margin-bottom: 2em;
+  /* margin-bottom: 2em; */
 }
 .news
 {
@@ -416,6 +416,15 @@ figcaption {
   display: inline-block;
   margin-right: .5em;
 }
+.admin-link {
+  list-style: none;
+  padding-left: 0;
+  font-size: .8em;
+}
+.admin-link li {
+  display: inline-block;
+  margin-right: 1em;
+}
 #backend_navigation ul li#title_nav {
   font-size: 3em;
   text-transform: lowercase;
@@ -474,14 +483,15 @@ figcaption {
     border-bottom: 1px solid #ccc;
     line-height: 3em;
   }
-  #nav ul {
-    flex-direction: column;
+  #nav {
+    width: 70%;
   }
   #header {
     justify-content: flex-start;
     width: 100%;
     height: 120vh;
     padding-left: 0;
+    border-bottom: 1px solid #ccc;
   }
   #layout-post {
     overflow: auto;
@@ -561,12 +571,16 @@ figcaption {
   #header_content img {
     display:none;
   }
-  #image_home {
-    margin: 0;
+  figure#image_home {
+    background: url('http://localhost/openclassroom/php_poo/miniblog/public/img/montagnes-pyrenees.jpg') fixed no-repeat;
+    /* background: url('././public/img/montagnes-pyrenees.jpg') fixed no-repeat; */
+    background-size: cover;
+    width: 100%;
   }
   #image_home img {
-    width: 50%;
+    opacity: 0;
     margin: 0 auto;
+    visibility: hidden;
   }
   #main_navigation {
     position: absolute;
@@ -585,6 +599,7 @@ figcaption {
     width: 100%;
     height: 120vh;
     padding-left: 0;
+    border-bottom: 1px solid #ccc;
   }
   #layout-post {
     overflow: auto;
@@ -598,7 +613,7 @@ figcaption {
     display: none;
   }
   figure#photo img {
-    width: 30%;
+    width: 60%;
   }
   #layout-post header, #dashbord-grid header {
     padding-bottom: 0;
