--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,10 @@ h2 span, h3 span, h4 span, p span {color:#777;}
   font-family: "Spectral", Georgia, serif;
 }
 .big-chars > span {font-size:100%;}
-
+img {
+  max-width: 100%;
+  height: auto;
+}
 .list-center {
   list-style: none;
   padding-left: 0;
@@ -120,35 +123,55 @@ section {
   padding-top: 2em;
 }
 .content-comment {
-  margin-top: 2em;
-  margin-bottom: 2em;
-  padding: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  padding: .5em 1em;
   background: #eee;
 }
 form {
   margin: 2em auto;
-  padding: 1em;
-  background: rgba(100, 100, 100, 0.1);
+  width: 100%;
 }
 fieldset {
   position: relative;
   border: none;
+  padding-left: 0;
+  padding-right: 0;
 }
 fieldset abbr {
   color: #f78686;
 }
-label {
-  color: rgba(0, 0, 0, 0.5);
+label.hidden {
+  /* color: rgba(0, 0, 0, 0.5);
   transform-origin: left;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease; */
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  width: 1px;
 }
 input, textarea {
   width: 100%;
-  margin-top: 10px;
-  background: rgba(100, 100, 100, 0.1);
+  margin-top: 0;
+  padding: 1em 0;
+  font-size: 1em;
+  background: rgba(234, 232, 232, 0.1);
+  border:0;
+  border-bottom: 2px solid #fbb9b9;
+  border-left: 2px solid #fbb9b9;
 }
 input#agreement {
   width: auto;
+}
+input[type="submit"] {
+  display: inline-block;
+  width: auto;
+  padding: .5em 1.5em;
+  cursor: pointer;
+  background: #252525;
+  color: #ccc;
 }
 
 #main_header {
@@ -277,15 +300,15 @@ figcaption {
   font-size: 60%;
 }
 #home-grid {
-    display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-content: stretch;
-    align-items: stretch;
-    width: 50%;
-    height: 100vh;
-    overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-content: stretch;
+  align-items: stretch;
+  width: 50%;
+  height: 100vh;
+  overflow-y: scroll;
 }
 #list-news {
   width: 70%;
@@ -407,8 +430,6 @@ figcaption {
 .admin-content {
   list-style: none;
   padding-left: 0;
-  padding-top: 1em;
-  margin-top: 1em;
   border-top: 1px dashed #ccc;
   font-size: .8em;
 }
